--- a/PersonalSite/classmates.html
+++ b/PersonalSite/classmates.html
@@ -27,6 +27,9 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 
+    <!-- Classmates CSS File -->
+    <link href="assets/css/classmates.css" rel="stylesheet" />
+
     <!-- =======================================================
     * Template Name: Kelly - v4.7.0
     * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
@@ -59,22 +62,189 @@
 
             <div class="header-social-links">
                 <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                <a href="https://github.com/romeobagunu" target="_blank" class="twitter" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="https://github.com/romeobagunu" target="_blank" class="twitter"><i class="bi bi-github"></i></a>
             </div>
 
         </div>
 
     </header><!-- End Header -->
-    <!-- ======= Hero Section ======= -->
-    <!-- Original Hero -->
-    <section id="hero" class="d-flex align-items-center">
-        <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
-            <h1>Romeo Bagunu</h1>
-            <h2>I'm a Full Stack Web Developer from Kansas City!</h2>
-            <a href="about.html" class="btn-about">About Me</a>
-        </div>
-    </section>
-    <!-- End Hero -->
+    <main id="main">
+        <section id="classmates-section" class="container">
+            <h2 class="section-title">Centriq Classmates</h2>
+            <div class="row d-flex justify-content-center">
+                <div class="col-lg-3 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <img src="assets/img/profile-pic.jpg" href="http://romeobagunu.com" target="_blank" class="classmate-img" />
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Classmate Name
+                            <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://romeobagunu.com" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <img src="assets/img/profile-pic.jpg" href="http://romeobagunu.com" target="_blank" class="classmate-img" />
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Classmate Name
+                            <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://romeobagunu.com" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <img src="assets/img/profile-pic.jpg" href="http://romeobagunu.com" target="_blank" class="classmate-img" />
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Classmate Name
+                            <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://romeobagunu.com" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <img src="assets/img/profile-pic.jpg" href="http://romeobagunu.com" target="_blank" class="classmate-img" />
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Classmate Name
+                            <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://romeobagunu.com" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row d-flex justify-content-center">
+                <div class="col-lg-3 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <img src="assets/img/profile-pic.jpg" href="http://romeobagunu.com" target="_blank" class="classmate-img" />
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Classmate Name
+                            <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://romeobagunu.com" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <img src="assets/img/profile-pic.jpg" href="http://romeobagunu.com" target="_blank" class="classmate-img" />
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Classmate Name
+                            <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://romeobagunu.com" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <img src="assets/img/profile-pic.jpg" href="http://romeobagunu.com" target="_blank" class="classmate-img" />
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Classmate Name
+                            <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://romeobagunu.com" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <img src="assets/img/profile-pic.jpg" href="http://romeobagunu.com" target="_blank" class="classmate-img" />
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Classmate Name
+                            <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://romeobagunu.com" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row d-flex justify-content-center">
+                <div class="col-lg-3 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <img src="assets/img/profile-pic.jpg" href="http://romeobagunu.com" target="_blank" class="classmate-img" />
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Classmate Name
+                            <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://romeobagunu.com" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <img src="assets/img/profile-pic.jpg" href="http://romeobagunu.com" target="_blank" class="classmate-img" />
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Classmate Name
+                            <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://romeobagunu.com" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <img src="assets/img/profile-pic.jpg" href="http://romeobagunu.com" target="_blank" class="classmate-img" />
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Classmate Name
+                            <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://romeobagunu.com" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <img src="assets/img/profile-pic.jpg" href="http://romeobagunu.com" target="_blank" class="classmate-img" />
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Classmate Name
+                            <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://romeobagunu.com" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <!-- ======= Footer ======= -->
     <footer id="footer">
         <div class="container">
