--- a/PersonalSite/classmates.html
+++ b/PersonalSite/classmates.html
@@ -71,7 +71,7 @@
     <main id="main">
         <section id="classmates-section" class="container">
             <h2 class="section-title">Centriq Classmates</h2>
-            <div class="row d-flex justify-content-center">
+            <div class="row py-5 d-flex justify-content-center">
                 <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <a href="http://mckinneywebdev.com" target="_blank"><img src="/assets/img/classmates/Sean.jpg" class="classmate-img" alt="Profile picture of my classmate Sean." /></a>
@@ -112,7 +112,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center">
+            <div class="row py-5 d-flex justify-content-center">
                 <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <a href="http://michaelredifer.com/" target="_blank"><img src="/assets/img/classmates/Michael.jpg" class="classmate-img" alt="Profile picture of my classmate Michael." /></a>
@@ -152,129 +152,130 @@
                         </h5>
                     </div>
                 </div>
-                <div class="row d-flex justify-content-center">
-                    <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
-                        <div class="mx-auto">
-                            <a href="http://alexklee.net/" target="_blank"><img src="/assets/img/classmates/Placeholder.png" class="classmate-img" alt="Profile picture of my classmate Alex." /></a>
-                        </div>
-                        <div class="mx-auto p-3">
-                            <h5>
-                                Alex Klee
-                                <a href="https://www.linkedin.com/in/alex-klee-6b962a232/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                                <br />
-                                <a href="http://alexklee.net/" target="_blank">Personal Site</a>
-                            </h5>
-                        </div>
+            </div>
+            <div class="row py-5 d-flex justify-content-center">
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <a href="http://alexklee.net/" target="_blank"><img src="/assets/img/classmates/Placeholder.png" class="classmate-img" alt="Profile picture of my classmate Alex." /></a>
                     </div>
-                    <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
-                        <div class="mx-auto">
-                            <a href="http://jazminerizo.com/" target="_blank"><img src="/assets/img/classmates/Jazmine.jpg" class="classmate-img" alt="Profile picture of my classmate Jazmine." /></a>
-                        </div>
-                        <div class="mx-auto p-3">
-                            <h5>
-                                Jazmine Rizo
-                                <a href="https://www.linkedin.com/in/jazmine-rizo-7aa283232/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                                <br />
-                                <a href="http://jazminerizo.com/" target="_blank">Personal Site</a>
-                            </h5>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
-                        <div class="mx-auto">
-                            <a href="http://mattroberts-dev.com/" target="_blank"><img src="/assets/img/classmates/Matt.jpg" class="classmate-img" alt="Profile picture of my classmate Matt." /></a>
-                        </div>
-                        <div class="mx-auto p-3">
-                            <h5>
-                                Matt Roberts
-                                <a href="https://www.linkedin.com/in/mattroberts-dev/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                                <br />
-                                <a href="http://mattroberts-dev.com/" target="_blank">Personal Site</a>
-                            </h5>
-                        </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Alex Klee
+                            <a href="https://www.linkedin.com/in/alex-klee-6b962a232/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://alexklee.net/" target="_blank">Personal Site</a>
+                        </h5>
                     </div>
                 </div>
-                <div class="row d-flex justify-content-center">
-                    <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
-                        <div class="mx-auto">
-                            <a href="#" target="_blank"><img src="/assets/img/classmates/Ben.jpg" class="classmate-img" alt="Profile picture of my classmate Ben." /></a>
-                        </div>
-                        <div class="mx-auto p-3">
-                            <h5>
-                                Benjamin McDaniel
-                                <a href="https://www.linkedin.com/in/benjaminjmcd" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                                <br />
-                                <a href="#" target="_blank">Personal Site</a>
-                            </h5>
-                        </div>
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <a href="http://jazminerizo.com/" target="_blank"><img src="/assets/img/classmates/Jazmine.jpg" class="classmate-img" alt="Profile picture of my classmate Jazmine." /></a>
                     </div>
-                    <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
-                        <div class="mx-auto">
-                            <a href="http://paytonvon.com/" target="_blank"><img src="/assets/img/classmates/Payton.jpg" class="classmate-img" alt="Profile picture of my classmate Payton." /></a>
-                        </div>
-                        <div class="mx-auto p-3">
-                            <h5>
-                                Payton VonHolten
-                                <a href="https://www.linkedin.com/in/payton-vonholten-695316233/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                                <br />
-                                <a href="http://paytonvon.com/" target="_blank">Personal Site</a>
-                            </h5>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
-                        <div class="mx-auto">
-                            <a href="http://projectpeacock.net/" target="_blank"><img src="/assets/img/classmates/Justin.jpg" class="classmate-img" alt="Profile picture of my classmate Justin." /></a>
-                        </div>
-                        <div class="mx-auto p-3">
-                            <h5>
-                                Justin Peacock
-                                <a href="https://www.linkedin.com/in/justin-peacock-6aa829229/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                                <br />
-                                <a href="http://projectpeacock.net/" target="_blank">Personal Site</a>
-                            </h5>
-                        </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Jazmine Rizo
+                            <a href="https://www.linkedin.com/in/jazmine-rizo-7aa283232/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://jazminerizo.com/" target="_blank">Personal Site</a>
+                        </h5>
                     </div>
                 </div>
-                <div class="row d-flex justify-content-center">
-                    <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
-                        <div class="mx-auto">
-                            <a href="#" target="_blank"><img src="/assets/img/classmates/Ian.jpg" class="classmate-img" alt="Profile picture of my classmate Ian." /></a>
-                        </div>
-                        <div class="mx-auto p-3">
-                            <h5>
-                                Ian McClaflin
-                                <a href="https://www.linkedin.com/in/ian-mcclaflin-982755232/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                                <br />
-                                <a href="#" target="_blank">Personal Site</a>
-                            </h5>
-                        </div>
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <a href="http://mattroberts-dev.com/" target="_blank"><img src="/assets/img/classmates/Matt.jpg" class="classmate-img" alt="Profile picture of my classmate Matt." /></a>
                     </div>
-                    <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
-                        <div class="mx-auto">
-                            <a href="#" target="_blank"><img src="/assets/img/classmates/Placeholder.png" class="classmate-img" alt="Profile picture of my classmate Enrique." /></a>
-                        </div>
-                        <div class="mx-auto p-3">
-                            <h5>
-                                Enrique Garcia
-                                <a href="#" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                                <br />
-                                <a href="#" target="_blank">Personal Site</a>
-                            </h5>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
-                        <div class="mx-auto">
-                            <a href="#" target="_blank"><img src="/assets/img/classmates/Placeholder.png" class="classmate-img" alt="Profile picture of my classmate Sam." /></a>
-                        </div>
-                        <div class="mx-auto p-3">
-                            <h5>
-                                Sam Nichols
-                                <a href="#" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                                <br />
-                                <a href="#" target="_blank">Personal Site</a>
-                            </h5>
-                        </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Matt Roberts
+                            <a href="https://www.linkedin.com/in/mattroberts-dev/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://mattroberts-dev.com/" target="_blank">Personal Site</a>
+                        </h5>
                     </div>
                 </div>
+            </div>
+            <div class="row py-5 d-flex justify-content-center">
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <a href="#" target="_blank"><img src="/assets/img/classmates/Ben.jpg" class="classmate-img" alt="Profile picture of my classmate Ben." /></a>
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Benjamin McDaniel
+                            <a href="https://www.linkedin.com/in/benjaminjmcd" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="#" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <a href="http://paytonvon.com/" target="_blank"><img src="/assets/img/classmates/Payton.jpg" class="classmate-img" alt="Profile picture of my classmate Payton." /></a>
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Payton VonHolten
+                            <a href="https://www.linkedin.com/in/payton-vonholten-695316233/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://paytonvon.com/" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <a href="http://projectpeacock.net/" target="_blank"><img src="/assets/img/classmates/Justin.jpg" class="classmate-img" alt="Profile picture of my classmate Justin." /></a>
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Justin Peacock
+                            <a href="https://www.linkedin.com/in/justin-peacock-6aa829229/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://projectpeacock.net/" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row py-5 d-flex justify-content-center">
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <a href="#" target="_blank"><img src="/assets/img/classmates/Ian.jpg" class="classmate-img" alt="Profile picture of my classmate Ian." /></a>
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Ian McClaflin
+                            <a href="https://www.linkedin.com/in/ian-mcclaflin-982755232/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="#" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <a href="#" target="_blank"><img src="/assets/img/classmates/Placeholder.png" class="classmate-img" alt="Profile picture of my classmate Enrique." /></a>
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Enrique Garcia
+                            <a href="#" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="#" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <a href="#" target="_blank"><img src="/assets/img/classmates/Placeholder.png" class="classmate-img" alt="Profile picture of my classmate Sam." /></a>
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Sam Nichols
+                            <a href="#" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="#" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -295,7 +296,7 @@
     </footer><!-- End  Footer -->
 
     <div id="preloader"></div>
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow py-5 gx-5 p-2-up-short"></i></a>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter.js"></script>
